Fixed: code styling and readability

--- a/client/src/components/InfoOverlay/InfoSection.module.scss
+++ b/client/src/components/InfoOverlay/InfoSection.module.scss
@@ -10,7 +10,7 @@
 
   .Header {
     background-color: rgba($color: color.$dark1, $alpha: 0.75);
-    max-height: 3rem;
+    max-height: 1.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
